Template UI - Working project with log in

--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-details.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-details.component.html
@@ -1,1 +1,15 @@
-<p>user-details works!</p>
+
+<div class="container">
+  <nav mat-tab-nav-bar>
+    <a mat-tab-link
+       *ngFor="let routeLink  of routeLinks"
+       [routerLink]="routeLink.link"
+       routerLinkActive #rla="routerLinkActive"
+       [active]="rla.isActive">
+      {{routeLink.label}}
+    </a>
+  </nav>
+</div>
+
+<!--<router-outlet (activate)="onActivate($event)"></router-outlet>-->
+<router-outlet></router-outlet>
