--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-list/user-list.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-list/user-list.component.html
@@ -1,1 +1,58 @@
-<p>user-list works!</p>
+<div class="container">
+  <mat-toolbar>
+    <h2>Users</h2>
+  </mat-toolbar>
+
+  <div class="user-list">
+    <div class="user-list-search">
+      <mat-form-field floatLabel="never" class="full-width">
+        <input matInput type="text" [(ngModel)]="searchKey" placeholder="Search" autocomplete="off"
+               (keyup)="applyFilter()">
+        <button (click)="onSearchClear()" mat-button matSuffix mat-icon-button aria-label="Clear" *ngIf="searchKey">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+    </div>
+
+    <div class="user-list-search-actions">
+      <button mat-raised-button (click)="create()" [disabled]="!userCreateAccess">
+        <mat-icon>add</mat-icon>
+        <span>Create</span>
+      </button>
+    </div>
+  </div>
+
+  <!-- List of users -->
+  <div class="user-list-content">
+
+    <mat-card class="user-list-content-card" *ngFor="let user of users">
+      <div><mat-icon class="material-icons md-48">face</mat-icon></div>
+      <div> {{user.firstName}} {{user.lastName}}</div>
+      <div> {{user.username}}</div>
+      <div> {{user.roleIds | convertIdsToValues: userCollectionRoleIds}}</div>
+      <div class="user-list-content-card-actions">
+        <button mat-icon-button [disabled]="!user.links.updateUser.href" (click)="onEdit(user)">
+          <mat-icon>launch</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" [disabled]="!user.links.deleteUser.href" (click)="delete(user.links.deleteUser.href)">
+          <mat-icon>delete_outline</mat-icon>
+        </button>
+      </div>
+    </mat-card>
+  </div>
+
+  <!--      &lt;!&ndash; Style the table footer (used only when the table is null &ndash;&gt;-->
+  <!--      <ng-container matColumnDef="loading">-->
+  <!--        <mat-footer-cell *matFooterCellDef colspan="6">-->
+  <!--          Loading data...-->
+  <!--        </mat-footer-cell>-->
+  <!--      </ng-container>-->
+
+  <!--      &lt;!&ndash; Style footer when there are no data to display&ndash;&gt;-->
+  <!--      <ng-container matColumnDef="noData">-->
+  <!--        <mat-footer-cell *matFooterCellDef colspan="6">-->
+  <!--          No Users found.-->
+  <!--        </mat-footer-cell>-->
+  <!--      </ng-container>-->
+
+</div>
