--- a/MonolithFullStackTemplate/templateUI/src/app/shared/wrapper/wrapper.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/wrapper/wrapper.component.html
@@ -1,4 +1,4 @@
-<div class="mainBody">
+<div class="container">
   <mat-sidenav-container class="wrapper-sidenav-container">
     <mat-sidenav #sidenav class="wrapper-sidenav mat-elevation-z10"
                  [mode]="'over'"
