--- a/MonolithFullStackTemplate/templateUI/src/app/shared/footer/footer.component.scss
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/footer/footer.component.scss
@@ -1,10 +1,10 @@
 .footer {
-  position: fixed;
+  //position: fixed;
 
   bottom: 0;
   width: 100%;
   height: 40px;
-  /*background-color: lightslategray;*/
+  //background-color: lightslategray;
   /*color: white;*/
   text-align: center;
   margin: 10px;
