--- a/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.scss
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.scss
@@ -35,6 +35,7 @@ $tabletSize: 800px;
 
   &-menu {
     display: none;
+    padding-left: 10%;
 
     @media (min-width: $tabletSize) {
       display: flex;
@@ -43,6 +44,11 @@ $tabletSize: 800px;
 
   &-actions {
     margin-left: auto;
+    padding-right: 0;
+
+    @media (min-width: $tabletSize) {
+      padding-right: 10%;
+    }
   }
 }
 
