--- a/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
@@ -12,8 +12,9 @@
           <span>Template UI</span>
         </div>
         <a mat-button class="btn-no-hover" routerLink="/home">Home</a>
-<!--        <a mat-button class="btn-no-hover" *ngIf="usersAccess" (click)="getUsers()">Users</a>-->
-        <a mat-button class="btn-no-hover" (click)="getUsers()">Users</a>
+        <a mat-button class="btn-no-hover" *ngIf="usersAccess" (click)="getUsers()">Users</a>
+<!--        <a mat-button class="btn-no-hover" (click)="getUsers()">Users</a>-->
+
       </div>
 
       <div class="header-actions">
