Template UI - Added user profile to local storage

--- a/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.scss
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.scss
@@ -44,7 +44,7 @@ $tabletSize: 800px;
 
   &-actions {
     margin-left: auto;
-    padding-right: 0;
+    padding-right: 2%;
 
     @media (min-width: $tabletSize) {
       padding-right: 10%;
