--- a/MonolithFullStackTemplate/templateUI/src/styles.scss
+++ b/MonolithFullStackTemplate/templateUI/src/styles.scss
@@ -73,3 +73,9 @@ $tabletSize: 800px;
   text-align: center;
   font-size: 20px;
 }
+
+.fill-remaining-space {
+  /* This fills the remaining space, by using flexbox.
+      Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
