--- a/MonolithFullStackTemplate/templateUI/src/app/shared/wrapper/wrapper.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/wrapper/wrapper.component.html
@@ -15,6 +15,7 @@
 
     <mat-sidenav-content class="wrapper-sidenav-content">
       <app-header (toggleSidenav)="sidenav.toggle()"></app-header>
+      <app-loading></app-loading>
       <router-outlet></router-outlet>
       <app-footer></app-footer>
 
