Template UI - Fixed get person profile

--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-profile/user-profile.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-profile/user-profile.component.html
@@ -7,7 +7,7 @@
   <mat-card>
     <mat-card-content>
       <!-- fields -->
-      <form [formGroup]="userDetailsProfileService.form" (ngSubmit)="updatePerson()">
+      <form [formGroup]="userProfileFormBuilder.form" (ngSubmit)="updatePerson()">
         <!--        <mat-grid-list cols=1 rowHeight="400px">-->
 
         <!-- grid 1 -->
@@ -18,9 +18,9 @@
             <mat-form-field color="primary">
               <input formControlName="firstName" matInput placeholder="First Name">
               <!-- adding validation message based on error type -->
-              <mat-error *ngIf="userDetailsProfileService.form.controls['firstName'].errors?.required">Mandatory
+              <mat-error *ngIf="userProfileFormBuilder.form.controls['firstName'].errors?.required">Mandatory
               </mat-error>
-              <mat-error *ngIf="userDetailsProfileService.form.controls['firstName'].errors?.minLength">Minimum 2
+              <mat-error *ngIf="userProfileFormBuilder.form.controls['firstName'].errors?.minLength">Minimum 2
                 characters
               </mat-error>
             </mat-form-field>
@@ -28,9 +28,9 @@
             <mat-form-field color="primary">
               <input formControlName="lastName" matInput placeholder="Last Name">
               <!-- adding validation message based on error type -->
-              <mat-error *ngIf="userDetailsProfileService.form.controls['lastName'].errors?.required">Mandatory
+              <mat-error *ngIf="userProfileFormBuilder.form.controls['lastName'].errors?.required">Mandatory
               </mat-error>
-              <mat-error *ngIf="userDetailsProfileService.form.controls['lastName'].errors?.minLength">Minimum 2
+              <mat-error *ngIf="userProfileFormBuilder.form.controls['lastName'].errors?.minLength">Minimum 2
                 characters
               </mat-error>
             </mat-form-field>
@@ -38,7 +38,7 @@
             <mat-form-field color="primary">
               <input formControlName="email" matInput placeholder="Email">
               <!-- adding validation message based on error type -->
-              <mat-error *ngIf="userDetailsProfileService.form.controls['email'].errors?.required">Mandatory
+              <mat-error *ngIf="userProfileFormBuilder.form.controls['email'].errors?.required">Mandatory
               </mat-error>
             </mat-form-field>
 
@@ -89,7 +89,7 @@
 
         <mat-card-actions class="user-profile-form-actions">
           <div align="end">
-            <button [disabled]="!userDetailsProfileService.form.valid" mat-raised-button type="submit" color="primary">
+            <button [disabled]="!userProfileFormBuilder.form.valid" mat-raised-button type="submit" color="primary">
               Update
             </button>
           </div>
