--- a/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
@@ -13,7 +13,7 @@
         </div>
         <a mat-button class="btn-no-hover" routerLink="/home">Home</a>
         <a mat-button class="btn-no-hover" *ngIf="usersAccess" (click)="getUsers()">Users</a>
-<!--        <a mat-button class="btn-no-hover" (click)="getUsers()">Users</a>-->
+        <a mat-button class="btn-no-hover" *ngIf="peopleAccess"(click)="getPeople()">People</a>
 
       </div>
 
