--- a/MonolithFullStackTemplate/templateUI/src/app/people/person-list/person-list.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/people/person-list/person-list.component.html
@@ -26,32 +26,22 @@
   <div class="person-list-content">
 
     <mat-card class="person-list-content-card" *ngFor="let person of people">
-      <div><mat-icon class="material-icons md-48">face</mat-icon></div>
+      <div>
+        <mat-icon class="material-icons md-48">face</mat-icon>
+      </div>
       <div> {{person.firstName}} {{person.lastName}}</div>
       <div> {{person.genderId | convertIdToValues: personCollectionGenderIds}}</div>
+      <div> {{person.maritalStatusId | convertIdToValues: personCollectionMaritalStatusesIds}}</div>
       <div class="person-list-content-card-actions">
         <button mat-icon-button [disabled]="!person.links.updatePerson.href" (click)="onEdit(person)">
           <mat-icon>launch</mat-icon>
         </button>
-        <button mat-icon-button color="warn" [disabled]="!person.links.deletePerson.href" (click)="delete(person.links.deletePerson.href)">
+        <button mat-icon-button color="warn" [disabled]="!person.links.deletePerson.href"
+                (click)="delete(person.links.deletePerson.href)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </div>
     </mat-card>
   </div>
-
-  <!--      &lt;!&ndash; Style the table footer (used only when the table is null &ndash;&gt;-->
-  <!--      <ng-container matColumnDef="loading">-->
-  <!--        <mat-footer-cell *matFooterCellDef colspan="6">-->
-  <!--          Loading data...-->
-  <!--        </mat-footer-cell>-->
-  <!--      </ng-container>-->
-
-  <!--      &lt;!&ndash; Style footer when there are no data to display&ndash;&gt;-->
-  <!--      <ng-container matColumnDef="noData">-->
-  <!--        <mat-footer-cell *matFooterCellDef colspan="6">-->
-  <!--          No Users found.-->
-  <!--        </mat-footer-cell>-->
-  <!--      </ng-container>-->
 
 </div>
