Template UI - Added user created link to list of people

--- a/MonolithFullStackTemplate/templateUI/src/app/people/person-list/person-list.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/people/person-list/person-list.component.html
@@ -15,9 +15,9 @@
     </div>
 
     <div class="person-list-search-actions">
-      <button mat-raised-button (click)="create()" [disabled]="!personCreateAccess">
+      <button mat-raised-button (click)="create()" [disabled]="!userCreateAccess">
         <mat-icon>add</mat-icon>
-        <span>Create</span>
+        <span>Create User</span>
       </button>
     </div>
   </div>
