Template UI - Added translation services

--- a/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/header/header.component.html
@@ -11,16 +11,16 @@
         <div class="pointerCursor">
           <span>Template UI</span>
         </div>
-        <a mat-button class="btn-no-hover" routerLink="/home">Home</a>
-        <a mat-button class="btn-no-hover" *ngIf="usersAccess" (click)="getUsers()">Users</a>
-        <a mat-button class="btn-no-hover" *ngIf="peopleAccess"(click)="getPeople()">People</a>
+        <a mat-button class="btn-no-hover" routerLink="/home">{{'header.home' | translate}}</a>
+        <a mat-button class="btn-no-hover" *ngIf="usersAccess" (click)="getUsers()">{{'header.users' | translate}}</a>
+        <a mat-button class="btn-no-hover" *ngIf="peopleAccess"(click)="getPeople()">{{'header.users' | translate}}</a>
 
       </div>
 
       <div class="header-actions">
         <div *ngIf="isLoggedOn; then userDetails else logInDetails"></div>
         <ng-template #userDetails>
-          <a mat-button class="btn-no-hover" (click)="logout()">Logout </a>
+          <a mat-button class="btn-no-hover" (click)="logout()">{{'header.logOut' | translate}} </a>
           <!--      <button mat-icon-button routerLink="/people" routerLinkActive="active">-->
           <button mat-icon-button (click)="getProfile()">
             <mat-icon>account_circle</mat-icon>
