--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-profile/user-profile.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-profile/user-profile.component.html
@@ -1,6 +1,10 @@
 <div class="container">
   <mat-toolbar>
+<!-- TODO Add styling for language cohice and move to the header -->
     <span>User Profile</span>
+    <button (click)="useLanguage('en')">English</button>
+    <button (click)="useLanguage('gr')">Greek</button>
+    <button (click)="useLanguage('pt-br')">Portuguese</button>
   </mat-toolbar>
 
   <!-- user profile detail -->
