--- a/MonolithFullStackTemplate/templateUI/src/app/app.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/app.component.html
@@ -1,1 +1,4 @@
 <app-wrapper></app-wrapper>
+<button (click)="useLanguage('en')">en</button>
+<button (click)="useLanguage('gr')">en</button>
+<button (click)="useLanguage('pt')">en</button>
