--- a/MonolithFullStackTemplate/templateUI/src/app/shared/wrapper/wrapper.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/shared/wrapper/wrapper.component.html
@@ -8,9 +8,9 @@
       </mat-toolbar>
 
       <div class="wrapper-sidenav-menu">
-        <a mat-button class="btn-no-hover" routerLink="/home" (click)="sidenav.toggle()">Home</a>
-        <a mat-button class="btn-no-hover" [hidden]="!usersAccess" (click)="getUsers()">Users</a>
-        <a mat-button class="btn-no-hover" [hidden]="!peopleAccess" (click)="getPeople()">People</a>
+        <a mat-button class="btn-no-hover" routerLink="/home" (click)="sidenav.toggle()">{{'header.home' | translate}}</a>
+        <a mat-button class="btn-no-hover" [hidden]="!usersAccess" (click)="getUsers()">{{'header.users' | translate}}</a>
+        <a mat-button class="btn-no-hover" [hidden]="!peopleAccess" (click)="getPeople()">{{'header.people' | translate}}</a>
       </div>
     </mat-sidenav>
 
