Template UI - Added translation services

--- a/MonolithFullStackTemplate/templateUI/src/app/home/home.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <mat-toolbar>
-    <span>Welcome</span>
+    <span>{{'home.title' | translate}}</span>
   </mat-toolbar>
   <br>
 
