--- a/MonolithFullStackTemplate/templateUI/src/app/people/person-list/person-list.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/people/person-list/person-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar>
-    <h2>People</h2>
+    <h2>{{'personList.title' | translate}}</h2>
   </mat-toolbar>
 
   <div class="person-list">
