--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-list/user-list.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar>
-    <h2>Users</h2>
+    <h2>{{'userList.title' | translate}}</h2>
   </mat-toolbar>
 
   <div class="user-list">
