Template UI - Added person form translations

--- a/MonolithFullStackTemplate/templateUI/src/app/people/person-list/person-list.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/people/person-list/person-list.component.html
@@ -17,7 +17,7 @@
     <div class="person-list-search-actions">
       <button mat-raised-button (click)="create()" [disabled]="!userCreateAccess">
         <mat-icon>add</mat-icon>
-        <span>Create User</span>
+        <span>{{'personList.add' | translate}}</span>
       </button>
     </div>
   </div>
