--- a/MonolithFullStackTemplate/templateUI/src/app/people/person/person.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/people/person/person.component.html
@@ -1,7 +1,9 @@
 <mat-card>
   <div class="hidden-small-screen">
     <mat-toolbar>
-      <span>{{personFormBuilder.form.controls['$key'].value ? "Modify Person" : "New Person"}}</span>
+      <span *ngIf="personFormBuilder.form.controls['$key'].value; then update else create"></span>
+      <ng-template #update>{{'person.form.newPerson' | translate}}</ng-template>
+      <ng-template #create>{{'person.form.updatePerson' | translate}}</ng-template>
       <span class="fill-remaining-space"></span>
       <button class="btn-dialog-close" mat-stroked-button (click)="onClose()" tabindex="-1">
         <mat-icon>clear</mat-icon>
@@ -22,7 +24,7 @@
           <input type="hidden" formControlName="$key">
 
           <mat-form-field color="primary">
-            <input formControlName="firstName" required matInput placeholder="First Name">
+            <input formControlName="firstName" required matInput placeholder="{{'person.firstName' | translate}}">
             <!-- adding validation message based on error type -->
             <mat-error *ngIf="personFormBuilder.form.controls['firstName'].errors?.required">Mandatory</mat-error>
             <mat-error *ngIf="personFormBuilder.form.controls['firstName'].errors?.minLength">Minimum 2 characters
@@ -30,7 +32,7 @@
           </mat-form-field>
 
           <mat-form-field color="primary">
-            <input formControlName="lastName" required matInput placeholder="Last Name">
+            <input formControlName="lastName" required matInput placeholder="{{'person.lastName' | translate}}">
             <!-- adding validation message based on error type -->
             <mat-error *ngIf="personFormBuilder.form.controls['lastName'].errors?.required">Mandatory</mat-error>
             <mat-error *ngIf="personFormBuilder.form.controls['lastName'].errors?.minLength">Minimum 2 characters
@@ -38,12 +40,12 @@
           </mat-form-field>
 
           <mat-form-field color="primary">
-            <input formControlName="email" matInput placeholder="Email" disabled="true">
+            <input formControlName="email" matInput placeholder="{{'person.email' | translate}}" disabled="true">
           </mat-form-field>
 
           <mat-form-field color="primary">
-            <mat-label>Date of Birth</mat-label>
-            <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="dateOfBirth">
+            <mat-label>{{'person.dateOfBirth' | translate}}</mat-label>
+            <input matInput [matDatepicker]="picker" placeholder="{{'form.chooseADate' | translate}}" formControlName="dateOfBirth">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
@@ -53,7 +55,7 @@
         <div class="person-dialog-form-content">
 
           <mat-form-field color="primary">
-            <mat-label>Gender</mat-label>
+            <mat-label>{{'person.gender' | translate}}</mat-label>
             <mat-select formControlName="genderId">
               <mat-option *ngFor="let gender of availableGenders" [value]="gender.value">
                 {{gender.viewValue}}
@@ -62,7 +64,7 @@
           </mat-form-field>
 
           <mat-form-field color="primary">
-            <mat-label>Gender</mat-label>
+            <mat-label>{{'person.maritalStatus' | translate}}</mat-label>
             <mat-select formControlName="maritalStatusId">
               <mat-option *ngFor="let maritalStatus of availableMaritalStatuses" [value]="maritalStatus.value">
                 {{maritalStatus.viewValue}}
@@ -71,23 +73,22 @@
           </mat-form-field>
 
           <mat-form-field color="primary">
-            <input formControlName="numberOfDependants" matInput placeholder="Number of dependants">
+            <input formControlName="numberOfDependants" matInput placeholder="{{'person.numberOfDependants' | translate}}">
           </mat-form-field>
 
           <mat-form-field color="primary">
-            <input formControlName="phoneNumber" matInput placeholder="Telephone number">
+            <input formControlName="phoneNumber" matInput placeholder="{{'person.telephoneNumber' | translate}}">
           </mat-form-field>
 
         </div>
-
       </div>
 
       <mat-card-actions class="person-dialog-form-actions">
         <div align="end">
-          <button mat-raised-button (click)="onClear()">Clear</button>
+          <button mat-raised-button (click)="onClear()">{{'form.clear' | translate}}</button>
           <button mat-raised-button color="primary" type="submit"
                   [disabled]="personFormBuilder.form.invalid"
-                  (click)="onSubmit()">Submit
+                  (click)="onSubmit()">{{'form.submit' | translate}}
           </button>
         </div>
       </mat-card-actions>
