--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-list/user-list.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-list/user-list.component.html
@@ -17,7 +17,7 @@
     <div class="user-list-search-actions">
       <button mat-raised-button (click)="create()" [disabled]="!userCreateAccess">
         <mat-icon>add</mat-icon>
-        <span>Create</span>
+        <span>{{'userList.add' | translate}}</span>
       </button>
     </div>
   </div>
