--- a/MonolithFullStackTemplate/templateUI/src/app/users/user/user.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user/user.component.html
@@ -2,7 +2,9 @@
 <mat-card>
   <div class="hidden-small-screen">
     <mat-toolbar>
-      <span>{{userFormBuilder.form.controls['$key'].value ? "Modify User" : "New User"}}</span>
+      <span *ngIf="userFormBuilder.form.controls['$key'].value; then createUser else updateUser"> </span>
+      <ng-template #updateUser>{{'user.form.newUser' | translate}}</ng-template>
+      <ng-template #createUser>{{'user.form.updateUser' | translate}}</ng-template>
       <span class="fill-remaining-space"></span>
       <button class="btn-dialog-close" mat-stroked-button (click)="onClose()" tabindex="-1">
         <mat-icon>clear</mat-icon>
@@ -18,12 +20,11 @@
   <mat-card-content>
     <form [formGroup]="userFormBuilder.form">
       <div class="user-dialog-form-container">
-
         <div class="user-dialog-form-content">
           <input type="hidden" formControlName="$key">
 
           <mat-form-field color="primary">
-            <input formControlName="firstName" required matInput placeholder="First Name">
+            <input formControlName="firstName" required matInput placeholder="{{'user.firstName' | translate}}">
             <!-- adding validation message based on error type -->
             <mat-error *ngIf="userFormBuilder.form.controls['firstName'].errors?.required">Mandatory</mat-error>
             <mat-error *ngIf="userFormBuilder.form.controls['firstName'].errors?.minLength">Minimum 2 characters
@@ -31,7 +32,7 @@
           </mat-form-field>
 
           <mat-form-field color="primary">
-            <input formControlName="lastName" required matInput placeholder="Last Name">
+            <input formControlName="lastName" required matInput placeholder="{{'user.lastName' | translate}}">
             <!-- adding validation message based on error type -->
             <mat-error *ngIf="userFormBuilder.form.controls['lastName'].errors?.required">Mandatory</mat-error>
             <mat-error *ngIf="userFormBuilder.form.controls['lastName'].errors?.minLength">Minimum 2 characters
@@ -39,7 +40,7 @@
           </mat-form-field>
 
           <mat-form-field color="primary">
-            <input formControlName="username" matInput placeholder="Username*">
+            <input formControlName="username" matInput placeholder="{{'user.username' | translate}}">
             <mat-error *ngIf="userFormBuilder.form.controls['username'].errors?.required">Mandatory</mat-error>
             <mat-error *ngIf="userFormBuilder.form.controls['username'].errors?.email">Must be a valid email
               format
@@ -47,7 +48,7 @@
           </mat-form-field>
 
           <mat-form-field color="primary">
-            <input formControlName="password" required matInput placeholder="Password"
+            <input formControlName="password" required matInput placeholder="{{'user.password' | translate}}"
                    [type]="hide? 'password' : 'text'">
             <mat-icon color="primary" matSuffix
                       (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -57,29 +58,28 @@
           </mat-form-field>
 
           <div class="add-bottom-padding">
-            <mat-checkbox formControlName="active"><span>Active</span></mat-checkbox>
+            <mat-checkbox formControlName="active"><span>{{'user.active' | translate}}</span></mat-checkbox>
           </div>
-
         </div>
 
         <div class="user-dialog-form-content">
           <mat-form-field color="primary">
-            <mat-label>Date of Birth</mat-label>
-            <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="dateOfBirth">
+            <mat-label>{{'user.dateOfBirth' | translate}}</mat-label>
+            <input matInput [matDatepicker]="picker" placeholder="{{'form.chooseADate' | translate}}" formControlName="dateOfBirth">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
 
           <!-- Create a div to hold the nested form array, as it cannot be used as controlFormName -->
           <div formArrayName="roles">
-            <span>Roles</span>
+            <span>{{'user.roles' | translate}}</span>
             <button mat-icon-button (click)="userFormBuilder.addRoleFormGroup()">
               <mat-icon>add</mat-icon>
             </button>
 
             <div *ngFor="let role of userFormBuilder.rolesFormArray.controls; let i = index;" [formGroupName]="i">
               <mat-form-field color="primary">
-                <mat-label>Role</mat-label>
+                <mat-label>{{'user.role' | translate}}</mat-label>
                 <mat-select formControlName="value" required>
                   <mat-option *ngFor="let role of availableRoles" [value]="role.value">
                     {{role.viewValue}}
@@ -97,10 +97,10 @@
 
       <mat-card-actions class="user-dialog-form-actions">
         <div align="end">
-          <button mat-raised-button (click)="onClear()">Clear</button>
+          <button mat-raised-button (click)="onClear()">{{'form.clear' | translate}}</button>
           <button mat-raised-button color="primary" type="submit"
                   [disabled]="userFormBuilder.form.invalid"
-                  (click)="onSubmit()">Submit
+                  (click)="onSubmit()">{{'form.submit' | translate}}
           </button>
         </div>
       </mat-card-actions>
