--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-profile/user-profile.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-profile/user-profile.component.html
@@ -1,23 +1,17 @@
 <div class="container">
   <mat-toolbar>
-<!-- TODO Add styling for language cohice and move to the header -->
-    <span>User Profile</span>
+    <span>{{'userProfile.title' | translate}}</span>
   </mat-toolbar>
 
   <!-- user profile detail -->
   <mat-card>
     <mat-card-content>
-      <!-- fields -->
       <form [formGroup]="userProfileFormBuilder.form" (ngSubmit)="updatePerson()">
-        <!--        <mat-grid-list cols=1 rowHeight="400px">-->
-
-        <!-- grid 1 -->
-        <!--          <mat-grid-tile>-->
         <div class="user-profile-form-container">
           <div class="user-profile-form-content">
             <input type="hidden" formControlName="$key">
             <mat-form-field color="primary">
-              <input formControlName="firstName" matInput placeholder="First Name">
+              <input formControlName="firstName" matInput placeholder="{{'userProfile.firstName' | translate}}">
               <!-- adding validation message based on error type -->
               <mat-error *ngIf="userProfileFormBuilder.form.controls['firstName'].errors?.required">Mandatory
               </mat-error>
@@ -27,7 +21,7 @@
             </mat-form-field>
 
             <mat-form-field color="primary">
-              <input formControlName="lastName" matInput placeholder="Last Name">
+              <input formControlName="lastName" matInput placeholder="{{'userProfile.lastName' | translate}}">
               <!-- adding validation message based on error type -->
               <mat-error *ngIf="userProfileFormBuilder.form.controls['lastName'].errors?.required">Mandatory
               </mat-error>
@@ -37,28 +31,24 @@
             </mat-form-field>
 
             <mat-form-field color="primary">
-              <input formControlName="email" matInput placeholder="Email">
+              <input formControlName="email" matInput placeholder="{{'userProfile.email' | translate}}">
               <!-- adding validation message based on error type -->
               <mat-error *ngIf="userProfileFormBuilder.form.controls['email'].errors?.required">Mandatory
               </mat-error>
             </mat-form-field>
 
             <mat-form-field color="primary">
-              <mat-label>Date of Birth</mat-label>
-              <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="dateOfBirth">
+              <mat-label>{{'userProfile.dateOfBirth' | translate}}</mat-label>
+              <input matInput [matDatepicker]="picker" placeholder="{{'form.chooseADate' | translate}}" formControlName="dateOfBirth">
               <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
 
           </div>
-          <!--          </mat-grid-tile>-->
 
-          <!-- grid 2 -->
-          <!--          <mat-grid-tile>-->
           <div class="user-profile-form-content">
-
             <mat-form-field color="primary">
-              <mat-label>Gender</mat-label>
+              <mat-label>{{'userProfile.gender' | translate}}</mat-label>
               <mat-select formControlName="genderId">
                 <mat-option *ngFor="let gender of genders" [value]="gender.value">
                   {{gender.viewValue}}
@@ -67,7 +57,7 @@
             </mat-form-field>
 
             <mat-form-field color="primary">
-              <mat-label>Marital Status</mat-label>
+              <mat-label>{{'userProfile.maritalStatus' | translate}}</mat-label>
               <mat-select formControlName="maritalStatusId">
                 <mat-option *ngFor="let maritalStatus of maritalStatuses" [value]="maritalStatus.value">
                   {{maritalStatus.viewValue}}
@@ -76,22 +66,20 @@
             </mat-form-field>
 
             <mat-form-field color="primary">
-              <input formControlName="numberOfDependants" matInput placeholder="Number of dependants">
+              <input formControlName="numberOfDependants" matInput placeholder="{{'userProfile.numberOfDependants' | translate}}">
             </mat-form-field>
 
             <mat-form-field color="primary">
-              <input formControlName="phoneNumber" matInput placeholder="Phone number">
+              <input formControlName="phoneNumber" matInput placeholder="{{'userProfile.phoneNumber' | translate}}">
             </mat-form-field>
 
           </div>
-          <!--          </mat-grid-tile>-->
-          <!--        </mat-grid-list>-->
         </div>
 
         <mat-card-actions class="user-profile-form-actions">
           <div align="end">
             <button [disabled]="!userProfileFormBuilder.form.valid" mat-raised-button type="submit" color="primary">
-              Update
+              {{'form.update' | translate}}
             </button>
           </div>
         </mat-card-actions>
