Template UI - Added translations to login and register

--- a/MonolithFullStackTemplate/templateUI/src/app/login/login.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar>
-    <span class="login-toolbar">Login</span>
+    <span class="login-toolbar">{{'login.title' | translate}}</span>
   </mat-toolbar>
 
   <div class="login-container">
@@ -9,8 +9,8 @@
         <form [formGroup]="loginForm" (ngSubmit)="login()">
 
           <mat-form-field class="full-width">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Email" name="email"
+            <mat-label>{{'login.email' | translate}}</mat-label>
+            <input matInput placeholder="{{'login.email' | translate}}" name="email"
                    formControlName="username" required [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
             <!-- adding validation message based on error type -->
             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
@@ -19,8 +19,8 @@
           </mat-form-field>
 
           <mat-form-field class="full-width">
-            <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" name="password"
+            <mat-label>{{'login.password' | translate}}</mat-label>
+            <input matInput placeholder="{{'login.password' | translate}}" name="password"
                    formControlName="password" required [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
                    [type]="hide? 'password' : 'text'">
             <mat-icon color="primary" matSuffix
@@ -33,9 +33,10 @@
 
           <mat-card-actions>
             <div align="end">
-              <a routerLink="/register" class="btn btn-link">Register</a>
+              <a routerLink="/register" class="btn btn-link">{{'login.register' | translate}}</a>
               <span class="spacer"></span>
-              <button [disabled]="loading || !loginForm.valid" mat-raised-button type="submit" color="primary">LOGIN
+              <button [disabled]="loading || !loginForm.valid" mat-raised-button type="submit"
+                      color="primary">{{'login.login' | translate}}
               </button>
               <span *ngIf="loading">Loading</span>
             </div>
