--- a/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-profile/user-profile.component.scss
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user-details/user-profile/user-profile.component.scss
@@ -15,8 +15,8 @@ $tabletSize: 800px;
 
   &-form-content{
     width: 100%;
-    padding-left: 10%;
-    padding-right: 10%;
+    //padding-left: 10%;
+    //padding-right: 10%;
 
     @media (min-width: $tabletSize) {
       padding: 5%;
