--- a/MonolithFullStackTemplate/templateUI/src/app/registration/registration.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/registration/registration.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!-- Toolbar-->
   <mat-toolbar>
-    <span class="registration-toolbar">Register</span>
+    <span class="registration-toolbar">{{'registration.title' | translate}}</span>
   </mat-toolbar>
 
   <!-- registration -->
@@ -12,32 +12,35 @@
         <form [formGroup]="registerForm" class="my-form" (ngSubmit)="register()">
 
           <mat-form-field class="full-width">
-            <mat-label>First Name</mat-label>
-            <input matInput placeholder="First Name" name="firstName"
+            <mat-label>{{'registration.firstName' | translate}}</mat-label>
+            <input matInput placeholder="{{'registration.firstName' | translate}}" name="firstName"
                    formControlName="firstName" required [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }">
             <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
               <div *ngIf="f.username.errors.required">First name is required</div>
             </div>
           </mat-form-field>
           <mat-form-field class="full-width">
-            <mat-label>Last Name</mat-label>
-            <input matInput placeholder="Last Name" name="lastName"
+            <mat-label>{{'registration.lastName' | translate}}</mat-label>
+            <input matInput placeholder="{{'registration.lastName' | translate}}" name="lastName"
                    formControlName="lastName" required [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }">
             <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
               <div *ngIf="f.lastName.errors.required">Last name is required</div>
             </div>
           </mat-form-field>
           <mat-form-field class="full-width">
-            <mat-label>Email</mat-label>
-            <input matInput placeholder="Email" name="email"
+            <mat-label>{{'registration.email' | translate}}</mat-label>
+            <input matInput placeholder="{{'registration.email' | translate}}" name="email"
                    formControlName="email" required [ngClass]="{ 'is-invalid': submitted && f.email.errors }">
+            <!--            <mat-error *ngIf="isUsernameAvailable('WilFerraciolli@wiltech.com')">Name taken biatch</mat-error>-->
+            <mat-error *ngIf="this.registerForm['controls'].email.hasError('alreadyExists')">Name taken
+            </mat-error>
             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-              <div *ngIf="f.lastName.errors.required">Email is required</div>
+              <div *ngIf="f.email.errors.required">Email is required</div>
             </div>
           </mat-form-field>
           <mat-form-field class="full-width">
-            <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" name="password"
+            <mat-label>{{'registration.password' | translate}}</mat-label>
+            <input matInput placeholder="{{'registration.password' | translate}}" name="password"
                    formControlName="password" required [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
                    [type]="hide? 'password' : 'text'">
             <mat-icon color="primary" matSuffix
@@ -47,19 +50,9 @@
             </div>
           </mat-form-field>
 
-          <!-- optionals -->
-          <!--      <section class="example-section">-->
-          <!--        <label class="example-margin">Gender:</label>-->
-          <!--        <mat-radio-group [(ngModel)]="genderId">-->
-          <!--          <mat-radio-button class="example-margin" value="after">Male</mat-radio-button>-->
-          <!--          <mat-radio-button class="example-margin" value="before">Female</mat-radio-button>-->
-          <!--          <mat-radio-button class="example-margin" value="before">Other</mat-radio-button>-->
-          <!--        </mat-radio-group>-->
-          <!--      </section>-->
-
           <mat-form-field>
-            <mat-label>Date of Birth</mat-label>
-            <input matInput [matDatepicker]="picker" placeholder="Choose a date" formControlName="dateOfBirth">
+            <mat-label>{{'registration.dateOfBirth' | translate}}</mat-label>
+            <input matInput [matDatepicker]="picker" placeholder="{{'form.chooseADate' | translate}}" formControlName="dateOfBirth">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
@@ -67,10 +60,10 @@
           <!-- buttons -->
           <mat-card-actions>
             <div align="end">
-              <a routerLink="/login" class="btn btn-link">Login</a>
+              <a routerLink="/login" class="btn btn-link">{{'registration.login' | translate}}</a>
               <span class="spacer"></span>
               <button [disabled]="loading || !registerForm.valid" mat-raised-button type="submit" color="primary">
-                REGISTER
+                {{'registration.register' | translate}}
               </button>
               <span *ngIf="loading">Loading</span>
             </div>
