--- a/MonolithFullStackTemplate/templateUI/src/app/home/home.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/home/home.component.html
@@ -5,57 +5,62 @@
   </mat-toolbar>
   <br>
 
-  <div class="contentBody">
-    <mat-card class="example-card">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Car insurances</mat-card-title>
-        <mat-card-subtitle>Cheap car insurance</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="https://picsum.photos/400/250" alt="Car insurance">
-      <mat-card-content>
-        <p>
-          Compare from different insurance providers the best insurance that suits you.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button><h4>Get Quote</h4></button>
-      </mat-card-actions>
-    </mat-card>
+  <div class="home-contentBody">
+    <div class="home-card">
+      <mat-card>
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Car insurances</mat-card-title>
+          <mat-card-subtitle>Cheap car insurance</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://picsum.photos/250/200" alt="Car insurance">
+        <mat-card-content>
+          <p>
+            Compare from different insurance providers the best insurance that suits you.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button (click)="getQuotes()"><h4>Get Quote</h4></button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
 
-    <mat-card class="example-card">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Medical Insurance</mat-card-title>
-        <mat-card-subtitle>Cheap medical insurance</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="https://picsum.photos/400/250" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          Compare from different insurance providers the best insurance that suits you.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button><h4>Get Quote</h4></button>
-      </mat-card-actions>
-    </mat-card>
+    <div class="home-card">
+      <mat-card>
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Medical Insurance</mat-card-title>
+          <mat-card-subtitle>Cheap medical insurance</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://picsum.photos/250/200" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            Compare from different insurance providers the best insurance that suits you.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button><h4>Get Quote</h4></button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
 
-    <mat-card class="example-card">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Pet Insurance</mat-card-title>
-        <mat-card-subtitle>Cheap pet insurance</mat-card-subtitle>
-      </mat-card-header>
-      <img mat-card-image src="https://picsum.photos/400/250" alt="Photo of a Shiba Inu">
-      <mat-card-content>
-        <p>
-          Compare from different insurance providers the best insurance that suits you.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button><h4>Get Quote</h4></button>
-      </mat-card-actions>
-    </mat-card>
-
+    <div class="home-card">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Pet Insurance</mat-card-title>
+          <mat-card-subtitle>Cheap pet insurance</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src="https://picsum.photos/250/200" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            Compare from different insurance providers the best insurance that suits you.
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-button><h4>Get Quote</h4></button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
   </div>
 </div>
