--- a/MonolithFullStackTemplate/templateUI/src/styles.scss
+++ b/MonolithFullStackTemplate/templateUI/src/styles.scss
@@ -79,3 +79,6 @@ $tabletSize: 800px;
       Every toolbar row uses a flexbox row layout. */
   flex: 1 1 auto;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
