--- a/MonolithFullStackTemplate/templateUI/src/app/login/login.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/login/login.component.html
@@ -11,23 +11,23 @@
           <mat-form-field class="full-width">
             <mat-label>{{'login.email' | translate}}</mat-label>
             <input matInput placeholder="{{'login.email' | translate}}" name="email"
-                   formControlName="username" required [ngClass]="{ 'is-invalid': submitted && f.username.errors }">
+                   formControlName="username" required [ngClass]="{ 'is-invalid': submitted && f['username'].errors }">
             <!-- adding validation message based on error type -->
-            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-              <div *ngIf="f.username.errors.required">Username is required</div>
+            <div *ngIf="submitted && f['username'].errors" class="invalid-feedback">
+              <div *ngIf="f['username'].errors?.['required']">Username is required</div>
             </div>
           </mat-form-field>
 
           <mat-form-field class="full-width">
             <mat-label>{{'login.password' | translate}}</mat-label>
             <input matInput placeholder="{{'login.password' | translate}}" name="password"
-                   formControlName="password" required [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+                   formControlName="password" required [ngClass]="{ 'is-invalid': submitted && f['password'].errors }"
                    [type]="hide? 'password' : 'text'">
             <mat-icon color="primary" matSuffix
                       (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             <!-- adding validation message based on error type -->
-            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-              <div *ngIf="f.password.errors.required">Password is required</div>
+            <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+              <div *ngIf="f['password'].errors?.['required']">Password is required</div>
             </div>
           </mat-form-field>
 
