--- a/MonolithFullStackTemplate/templateUI/src/app/users/user/user.component.html
+++ b/MonolithFullStackTemplate/templateUI/src/app/users/user/user.component.html
@@ -26,23 +26,23 @@
           <mat-form-field color="primary">
             <input formControlName="firstName" required matInput placeholder="{{'user.firstName' | translate}}">
             <!-- adding validation message based on error type -->
-            <mat-error *ngIf="userFormBuilder.form.controls['firstName'].errors?.required">Mandatory</mat-error>
-            <mat-error *ngIf="userFormBuilder.form.controls['firstName'].errors?.minLength">Minimum 2 characters
+            <mat-error *ngIf="userFormBuilder.form.controls['firstName'].errors?.['required']">Mandatory</mat-error>
+            <mat-error *ngIf="userFormBuilder.form.controls['firstName'].errors?.['minLength']">Minimum 2 characters
             </mat-error>
           </mat-form-field>
 
           <mat-form-field color="primary">
             <input formControlName="lastName" required matInput placeholder="{{'user.lastName' | translate}}">
             <!-- adding validation message based on error type -->
-            <mat-error *ngIf="userFormBuilder.form.controls['lastName'].errors?.required">Mandatory</mat-error>
-            <mat-error *ngIf="userFormBuilder.form.controls['lastName'].errors?.minLength">Minimum 2 characters
+            <mat-error *ngIf="userFormBuilder.form.controls['lastName'].errors?.['required']">Mandatory</mat-error>
+            <mat-error *ngIf="userFormBuilder.form.controls['lastName'].errors?.['minLength']">Minimum 2 characters
             </mat-error>
           </mat-form-field>
 
           <mat-form-field color="primary">
             <input formControlName="username" matInput placeholder="{{'user.username' | translate}}">
-            <mat-error *ngIf="userFormBuilder.form.controls['username'].errors?.required">Mandatory</mat-error>
-            <mat-error *ngIf="userFormBuilder.form.controls['username'].errors?.email">Must be a valid email
+            <mat-error *ngIf="userFormBuilder.form.controls['username'].errors?.['required']">Mandatory</mat-error>
+            <mat-error *ngIf="userFormBuilder.form.controls['username'].errors?.['email']">Must be a valid email
               format
             </mat-error>
           </mat-form-field>
@@ -52,8 +52,8 @@
                    [type]="hide? 'password' : 'text'">
             <mat-icon color="primary" matSuffix
                       (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            <mat-error *ngIf="userFormBuilder.form.controls['password'].errors?.required">Mandatory</mat-error>
-            <mat-error *ngIf="userFormBuilder.form.controls['password'].errors?.minLength">Minimum 6 characters
+            <mat-error *ngIf="userFormBuilder.form.controls['password'].errors?.['required']">Mandatory</mat-error>
+            <mat-error *ngIf="userFormBuilder.form.controls['password'].errors?.['minLength']">Minimum 6 characters
             </mat-error>
           </mat-form-field>
 
